--- a/index.html
+++ b/index.html
@@ -15,8 +15,32 @@
 </head>
 
 <body>
+
+    
     <div class="main-container">
-        <header></header>
+        <header>
+<section class="header-accueil">
+    <figure class="header-logo">
+        <a href="#">
+            <img src="images/logo/Booki.png" alt="booki-logo">
+        </a>
+    </figure>
+    <nav class="header-nav">
+        <ul class="liste-nav centrer-flex">
+            <li class="item-nav centrer-flex">
+                <a class="centrer-flex" href="#hebergement">Hébergements</a>
+            </li>
+            <li class="item-nav centrer-flex">
+                <a class="centrer-flex" href="#activite">Activités</a>
+            </li>
+        </ul>
+    </nav>
+</section>
+ </header>
+
+
+
+
         <main>
             <div class="hebergements-and-populaires">
                 <section class="hebergements">
