finalisation du header

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
 
-    
+
     <div class="main-container">
         <header>
 <section class="header-accueil">
@@ -36,9 +36,13 @@
         </ul>
     </nav>
 </section>
- </header>
+<section class = header-presentation>
+        <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
+            <p>En plein centre-ville ou en pleine nature</p>
+                </section>
+                    </header>
 
-
+ <section class="section-recherche">
 
 
         <main>
