--- a/index.html
+++ b/index.html
@@ -42,9 +42,49 @@
                 </section>
                     </header>
 
- <section class="section-recherche">
+    <section class="section-recherche">
 
 
+<form action="" method="get">
+
+    <label for="recherche"> <i class="fa-solid fa-location-dot"></i></label>
+        <input type="search" name="search" class="search" id="recherche" placeholder="Marseille, France">
+            <input type="submit" class="submit" value="Rechercher">
+</form>
+
+
+    <div class="filtres">
+
+        <h2>Filtres</h2> 
+
+        <div tabindex="0" class="box-filtre">
+            <figure class="filtre-logo centrer-flex"></figure>
+            <h3>Economique</h3>
+        </div>
+
+        <div tabindex="0" class="box-filtre">
+            <figure class="filtre-logo centrer-flex"></figure>
+            <h3>Familial</h3>
+        </div>
+
+        <div tabindex="0" class="box-filtre">
+            <figure class="filtre-logo centrer-flex"></figure>
+            <h3>Romantique</h3>
+        </div>
+
+        <div tabindex="0" class="box-filtre">
+            <figure class="filtre-logo centrer-flex"></figure>
+            <h3>Nos pépites</h3>
+        </div>
+    </div>
+    
+    <div class="conteneur-info">
+        <figure class="logo-info centrer-flex"></figure>
+        <p>Plus de 500 logements sont disponibles dans cette ville</p>
+    </div>
+
+</section>
+<br>
         <main>
             <div class="hebergements-and-populaires">
                 <section class="hebergements">
