--- a/index.html
+++ b/index.html
@@ -84,12 +84,75 @@
     </div>
 
 </section>
-<br>
-        <main>
+       
+<main>
             <div class="hebergements-and-populaires">
                 <section class="hebergements">
 
+
+
+<h1>Hébergements à Marseille</h1>
+
+            <section class="cartes">
+       <div class="box-carte-hebergement">
+    <img src="images/hebergements/fred-kleber.jpg" alt="Hôtel du port">
+  <div class="card-content">
+<h4>Hôtel du port</h4>
+   <p>Nuit à partir de 52€</p>
+      </div>
+          </div>
+
+
+          <div class="box-carte-hebergement">
+            <img src="images/hebergements/febrian-zakaria.jpg" alt="Hôtel chez Amina">
+          <div class="card-content">
+        <h4>Hôtel Chez Amina</h4>
+           <p>Nuit à partir de 96€</p>
+              </div>
+                  </div>
+
+
+                  <div class="box-carte-hebergement">
+                    <img src="images/hebergements/reisetopia.jpg" alt="Hôtel Les mouettes">
+                  <div class="card-content">
+                <h4>Hôtel Les mouettes</h4>
+                   <p>Nuit à partir de 76€</p>
+                      </div>
+                          </div>
+
+                          <div class="box-carte-hebergement">
+                            <img src="images/hebergements/annie-spratt.jpg" alt="Hôtel de la mer">
+                          <div class="card-content">
+                        <h4>Hôtel de la mer</h4>
+                           <p>Nuit à partir de 46€</p>
+                              </div>
+                                  </div>
+
+                                  <div class="box-carte-hebergement">
+                                    <img src="images/hebergements/marcus-loke.jpg" alt="Auberge La Canebière">
+                                  <div class="card-content">
+                                <h4>Auberge La Canebière</h4>
+                                   <p>Nuit à partir de 25€</p>
+                                      </div>
+                                          </div>
+        
+
+                                          <div class="box-carte-hebergement">
+                                            <img src="images/hebergements/nicate-lee.jpg" alt="Auberge Le Panier">
+                                          <div class="card-content">
+                                        <h4>Auberge Le Panier</h4>
+                                           <p>Nuit à partir de 23€</p>
+                                              </div>
+                                                  </div>
+                                                     </section>
+            <h3>Afficher plus</h3>  
+
                 </section>
+
+
+
+
+
                 <section class="populaires">
                     <div class="populaires-title">
                         <h2 class="section-title">Les plus populaires</h2>
