modif afficher plus + maj mentor

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                                               </div>
                                                   </div>
                                                      </section>
-            <h3>Afficher plus</h3>  
+            <a href="" ><strong>Afficher plus</strong></a>  
 
                 </section>
 
