mise en page et css de la div activités

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     <img src="images/hebergements/fred-kleber.jpg" alt="Hôtel du port">
   <div class="card-content">
 <h4>Hôtel du port</h4>
-   <p>Nuit à partir de 52€</p>
+   <p>Nuit à partir de  <em class="euro">52€</em></p>
       </div>
           </div>
 
@@ -107,7 +107,7 @@
             <img src="images/hebergements/febrian-zakaria.jpg" alt="Hôtel chez Amina">
           <div class="card-content">
         <h4>Hôtel Chez Amina</h4>
-           <p>Nuit à partir de 96€</p>
+           <p>Nuit à partir de  <em class="euro">96€</em></p>
               </div>
                   </div>
 
@@ -116,7 +116,7 @@
                     <img src="images/hebergements/reisetopia.jpg" alt="Hôtel Les mouettes">
                   <div class="card-content">
                 <h4>Hôtel Les mouettes</h4>
-                   <p>Nuit à partir de 76€</p>
+                   <p>Nuit à partir de  <em class="euro">76€</em></p>
                       </div>
                           </div>
 
@@ -124,7 +124,7 @@
                             <img src="images/hebergements/annie-spratt.jpg" alt="Hôtel de la mer">
                           <div class="card-content">
                         <h4>Hôtel de la mer</h4>
-                           <p>Nuit à partir de 46€</p>
+                           <p>Nuit à partir de <em class="euro">46€</em></p>
                               </div>
                                   </div>
 
@@ -132,7 +132,7 @@
                                     <img src="images/hebergements/marcus-loke.jpg" alt="Auberge La Canebière">
                                   <div class="card-content">
                                 <h4>Auberge La Canebière</h4>
-                                   <p>Nuit à partir de 25€</p>
+                                   <p>Nuit à partir de  <em class="euro">25€</em></p>
                                       </div>
                                           </div>
         
@@ -141,7 +141,7 @@
                                             <img src="images/hebergements/nicate-lee.jpg" alt="Auberge Le Panier">
                                           <div class="card-content">
                                         <h4>Auberge Le Panier</h4>
-                                           <p>Nuit à partir de 23€</p>
+                                           <p>Nuit à partir de  <em class="euro">23€</em></p>
                                               </div>
                                                   </div>
                                                      </section>
@@ -219,6 +219,40 @@
                     </div>
                 </section>
             </div>
+
+
+                <section class="Activités"> 
+
+                        <div class="Activités-marseille" >
+                            <h3>Activités à Marseille</h3>
+                        </div>
+
+                            <div class="div-activités">
+
+
+                              <div class="card-activités">
+                                <img src="images/activites/reno-laithienne.jpg" alt="vieux-port">
+                                    <h4>Vieux-Port</h4>
+                                </div>
+
+                                <div class="card-activités">
+                                    <img src="images/activites/paul-hermann.jpg" alt="Fort de Pomègues">
+                                        <h4>Fort de Pomègues</h4>
+                                    </div>
+
+                                    <div class="card-activités">
+                                        <img src="images/activites/kilyan-sockalingum.jpg" alt="Parc national des Calanques">
+                                            <h4>Parc national des Calanques</h4>
+                                        </div>
+
+                                        <div class="card-activités">
+                                            <img src="images/activites/florian-wehde.jpg" alt="Notre-Dame-de-la-Garde">
+                                                <h4>Notre-Dame-de-la-Garde</h4>
+                                            </div>
+                                 </div>
+                        </section>
+
+
         </main>
         <footer></footer>
     </div>
