reparation des probleme

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
 <form action="" method="get">
 
-    <label for="recherche"> <i class="fa-solid fa-location-dot"></i></label>
+    <label for="recherche"> <i class="fa-solid fa-location-dot ping"></i></label>
         <input type="search" name="search" class="search" id="recherche" placeholder="Marseille, France">
             <input type="submit" class="submit" value="Rechercher">
 </form>
@@ -99,6 +99,14 @@
   <div class="card-content">
 <h4>Hôtel du port</h4>
    <p>Nuit à partir de  <em class="euro">52€</em></p>
+   <div class="card-rating">
+    <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+    <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+    <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+    <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+    <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"></i>
+    <span class="sr-only">Note de 4 sur 5</span>
+</div>
       </div>
           </div>
 
@@ -108,6 +116,14 @@
           <div class="card-content">
         <h4>Hôtel Chez Amina</h4>
            <p>Nuit à partir de  <em class="euro">96€</em></p>
+           <div class="card-rating">
+            <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+            <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+            <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+            <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+            <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"></i>
+            <span class="sr-only">Note de 4 sur 5</span>
+        </div>
               </div>
                   </div>
 
@@ -117,6 +133,14 @@
                   <div class="card-content">
                 <h4>Hôtel Les mouettes</h4>
                    <p>Nuit à partir de  <em class="euro">76€</em></p>
+                   <div class="card-rating">
+                    <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                    <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                    <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                    <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                    <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"></i>
+                    <span class="sr-only">Note de 4 sur 5</span>
+                </div>
                       </div>
                           </div>
 
@@ -125,7 +149,15 @@
                           <div class="card-content">
                         <h4>Hôtel de la mer</h4>
                            <p>Nuit à partir de <em class="euro">46€</em></p>
-                              </div>
+                           <div class="card-rating">
+                            <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                            <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                            <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                            <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                            <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"></i>
+                            <span class="sr-only">Note de 4 sur 5</span>
+                        </div>
+                            </div>
                                   </div>
 
                                   <div class="box-carte-hebergement">
@@ -133,7 +165,15 @@
                                   <div class="card-content">
                                 <h4>Auberge La Canebière</h4>
                                    <p>Nuit à partir de  <em class="euro">25€</em></p>
-                                      </div>
+                                   <div class="card-rating">
+                                    <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                    <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                    <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                    <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                    <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"></i>
+                                    <span class="sr-only">Note de 4 sur 5</span>
+                                </div>
+                                     </div>
                                           </div>
         
 
@@ -142,6 +182,14 @@
                                           <div class="card-content">
                                         <h4>Auberge Le Panier</h4>
                                            <p>Nuit à partir de  <em class="euro">23€</em></p>
+                                           <div class="card-rating">
+                                            <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                            <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                            <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                            <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                            <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"></i>
+                                            <span class="sr-only">Note de 4 sur 5</span>
+                                        </div>
                                               </div>
                                                   </div>
                                                      </section>
@@ -165,7 +213,7 @@
                                 <div class="card-content">
                                     <div class="card-txt">
                                         <h3 class="card-title">Hôtel Le soleil du matin</h3>
-                                        <p class="card-subtitle">Nuit à partir de 128<span class="euro">€</span></p>
+                                        <p class="card-subtitle">Nuit à partir de 25<span class="euro">€</span></p>
                                     </div>
                                     <div class="card-rating">
                                         <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
