--- a/index.html
+++ b/index.html
@@ -302,8 +302,37 @@
 
 
         </main>
-        <footer></footer>
-    </div>
+        <footer>
+
+                <div class="a-propos">
+                    <h3>À propos</h3>
+                    <ul>
+                    <li><a href="#">Fonctionnement du site</a></li>
+                    <li><a href="#">Conditions générales</a></li>
+                    <li><a href="#">Données et confidentialité</a></li>
+                    </ul>
+                </div>
+
+
+                <div class="nos-hebergements">
+                    <h3>Nos hébergements</h3>
+                    <ul>
+                <li><a href="#">Charte qualité</a></li>
+                <li><a href="#">Proposer votre hôtel</a></li>
+                    </ul>   
+
+                </div>
+
+
+                <div class="assistance">
+                    <h3>Assistance</h3>
+                    <ul>
+                    <li><a href="#">Centre d’aide</a></li>
+                    <li><a href="#">Nous contacter</a></li>
+                    </ul>
+                </div>
+
+        </footer>
 </body>
 
 </html>
