mise en place des ancre et maj de la mise en forme

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
        
 <main>
             <div class="hebergements-and-populaires">
-                <section class="hebergements">
+                <section id="hebergement" class="hebergements"> 
 
 
 
@@ -269,7 +269,7 @@
             </div>
 
 
-                <section class="Activités"> 
+                <section id="activite" class="Activités"> 
 
                         <div class="Activités-marseille" >
                             <h3>Activités à Marseille</h3>
