apres visio avec mentor pre retouche

--- a/index.html
+++ b/index.html
@@ -19,30 +19,30 @@
 
     <div class="main-container">
         <header>
-<section class="header-accueil">
-    <figure class="header-logo">
-        <a href="#">
-            <img src="images/logo/Booki.png" alt="booki-logo">
-        </a>
-    </figure>
-    <nav class="header-nav">
-        <ul class="liste-nav centrer-flex">
-            <li class="item-nav centrer-flex">
-                <a class="centrer-flex" href="#hebergement">Hébergements</a>
-            </li>
-            <li class="item-nav centrer-flex">
-                <a class="centrer-flex" href="#activite">Activités</a>
-            </li>
-        </ul>
-    </nav>
-</section>
-<section class = header-presentation>
-        <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
-            <p>En plein centre-ville ou en pleine nature</p>
-                </section>
-                    </header>
+            <section class="header-accueil">
+                <figure class="header-logo">
+                    <a href="#">
+                        <img src="images/logo/Booki.png" alt="booki-logo">
+                    </a>
+                </figure>
+                <nav class="header-nav">
+                    <ul class="liste-nav centrer-flex">
+                        <li class="item-nav centrer-flex">
+                            <a class="centrer-flex" href="#hebergement">Hébergements</a>
+                        </li>
+                        <li class="item-nav centrer-flex">
+                            <a class="centrer-flex" href="#activite">Activités</a>
+                        </li>
+                    </ul>
+                </nav>
+            </section>
+            <section class="header-presentation">
+                <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
+                <p>En plein centre-ville ou en pleine nature</p>
+            </section>
+        </header>
 
-    <section class="section-recherche">
+        <section class="section-recherche">
 
 
 <form action="" method="get">
@@ -58,30 +58,22 @@
         <h2>Filtres</h2> 
 
         <div tabindex="0" class="box-filtre">
-            <figure class="filtre-logo centrer-flex"><svg width="22" height="22" viewBox="0 0 22 22" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M21.352 3.68473C20.0187 3.09418 18.6842 2.86951 17.3505 2.86951C13.1166 2.86914 8.88305 5.13224 4.64915 5.13224C3.58732 5.13224 2.52618 4.98995 1.46435 4.63425C1.34507 4.59432 1.22545 4.57545 1.10858 4.57545C0.516992 4.57545 0 5.05892 0 5.73004V17.2455C0 17.7039 0.248527 18.1384 0.647615 18.3148C1.981 18.9057 3.31542 19.1304 4.64915 19.1304C8.88305 19.1304 13.117 16.8673 17.3509 16.8673C18.4127 16.8673 19.4738 17.0096 20.5356 17.3653C20.6549 17.4052 20.7745 17.4241 20.8914 17.4241C21.483 17.4241 22 16.9406 22 16.2695V4.75439C21.9997 4.2956 21.7511 3.86149 21.352 3.68473ZM1.64997 6.50715C2.34159 6.69008 3.06345 6.78191 3.80594 6.83128C3.60382 7.89803 2.71558 8.702 1.64997 8.702V6.50715ZM1.64997 16.8517V15.1174C2.83142 15.1174 3.78738 16.1072 3.83997 17.346C3.06551 17.2803 2.34159 17.117 1.64997 16.8517ZM10.9998 14.4844C9.48082 14.4844 8.24987 12.924 8.24987 10.9999C8.24987 9.0755 9.48116 7.51547 10.9998 7.51547C12.5185 7.51547 13.7498 9.0755 13.7498 10.9999C13.7498 12.9247 12.5181 14.4844 10.9998 14.4844ZM20.3497 15.4927C19.7474 15.3334 19.1222 15.2441 18.4825 15.1864C18.6842 14.2398 19.4278 13.5211 20.3497 13.3977V15.4927ZM20.3497 6.92275C19.2879 6.78083 18.4639 5.84474 18.4312 4.68869C19.1029 4.76746 19.7406 4.91482 20.3497 5.14821V6.92275Z" fill="#0065FC"/>
-                </svg></figure>
+            <img class="filtre-logo centrer-flex" src ="images/logo/Property 1=price.svg" alt="icone billet">
             <h3>Economique</h3>
         </div>
 
         <div tabindex="0" class="box-filtre">
-            <figure class="filtre-logo centrer-flex"><svg width="22" height="22" viewBox="0 0 22 22" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M12.7396 2.0625C12.7396 3.2016 11.8362 4.125 10.7228 4.125C9.60937 4.125 8.70601 3.2016 8.70601 2.0625C8.70601 0.923398 9.60937 0 10.7228 0C11.8362 0 12.7396 0.923398 12.7396 2.0625ZM10.3867 15.125V20.625C10.3867 21.3855 9.78584 22 9.04214 22C8.29845 22 7.69762 21.3855 7.69762 20.625V11.0387L6.4972 13.084C6.11485 13.7328 5.28881 13.9434 4.65226 13.5523C4.01569 13.1613 3.80979 12.3191 4.1923 11.666L6.6409 7.50234C7.36989 6.26055 8.6808 5.5 10.0968 5.5H11.3488C12.7648 5.5 14.0757 6.26055 14.8068 7.50234L17.2522 11.666C17.6345 12.3191 17.4286 13.1613 16.7942 13.5523C16.1555 13.9434 15.332 13.7328 14.9497 13.084L13.748 11.0387V20.625C13.748 21.3855 13.1472 22 12.4035 22C11.6598 22 11.0589 21.3855 11.0589 20.625V15.125H10.3867Z" fill="#0065FC"/>
-                </svg></figure>
+            <img class="filtre-logo centrer-flex" src="images/logo/icon-fam.svg" alt="icone famille">
             <h3>Familial</h3>
         </div>
 
         <div tabindex="0" class="box-filtre">
-            <figure class="filtre-logo centrer-flex"><svg width="23" height="22" viewBox="0 0 23 22" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M0.503296 8.22829V7.98543C0.503296 5.05861 2.67408 2.56224 5.63376 2.08155C7.55447 1.76375 9.58689 2.38596 10.9877 3.75306L11.5033 4.25468L11.9802 3.75306C13.4197 2.38596 15.4135 1.76375 17.3728 2.08155C20.3334 2.56224 22.5033 5.05861 22.5033 7.98543V8.22829C22.5033 9.96595 21.7642 11.6283 20.458 12.8132L12.6935 19.8769C12.3713 20.17 11.9459 20.3333 11.5033 20.3333C11.0607 20.3333 10.6353 20.17 10.3131 19.8769L2.54818 12.8132C1.24365 11.6283 0.503309 9.96595 0.503309 8.22829H0.503296Z" fill="#0065FC"/>
-                </svg></figure>
+            <img class="filtre-logo centrer-flex" src ="images/logo/Property 1=romantic.svg" alt="icone Romantiques">
             <h3>Romantique</h3>
         </div>
 
         <div tabindex="0" class="box-filtre">
-            <figure class="filtre-logo centrer-flex"><svg width="23" height="22" viewBox="0 0 23 22" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M9.40057 1.21273C9.71396 0.92649 10.2001 0.930411 10.5135 1.21665C11.6224 2.23221 12.6631 3.32619 13.6354 4.51036C14.0774 3.94572 14.5796 3.33011 15.122 2.82821C15.4394 2.53805 15.9296 2.53805 16.247 2.83214C17.6372 4.12609 18.8144 5.83568 19.6421 7.45901C20.4577 9.05881 21.0001 10.6939 21.0001 11.8467C21.0001 16.85 16.9903 21.0769 12.0001 21.0769C6.95369 21.0769 3.00012 16.8461 3.00012 11.8428C3.00012 10.3371 3.7153 8.4981 4.82423 6.67872C5.94521 4.83189 7.52825 2.90664 9.40057 1.21273ZM12.0684 17.3127C13.0849 17.3127 13.9849 17.0382 14.8327 16.4893C16.5242 15.3365 16.9782 13.0309 15.9617 11.2193C15.7809 10.8664 15.3189 10.8429 15.0577 11.1409L14.0452 12.2898C13.78 12.5878 13.3019 12.5799 13.0528 12.2702C12.3899 11.4468 11.2046 9.97635 10.5296 9.14116C10.2765 8.82747 9.79432 8.82355 9.53718 9.13723C8.17914 10.8037 7.4961 11.8545 7.4961 13.0348C7.50012 15.7207 9.53316 17.3127 12.0684 17.3127Z" fill="#0065FC"/>
-                </svg></figure> 
+            <img class="filtre-logo centrer-flex" src ="images/logo/Property 1=fire.svg" alt="icone pépites">
             <h3>Nos pépites</h3>
         </div>
     </div>
@@ -105,7 +97,7 @@
        <div class="box-carte-hebergement">
     <img src="images/hebergements/fred-kleber.jpg" alt="Hôtel du port">
   <div class="card-content">
-<h4>Hôtel du port</h4>
+<h3>Hôtel du port</h3>
    <p>Nuit à partir de  <em class="euro">52€</em></p>
    <div class="card-rating">
     <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
@@ -122,7 +114,7 @@
           <div class="box-carte-hebergement">
             <img src="images/hebergements/febrian-zakaria.jpg" alt="Hôtel chez Amina">
           <div class="card-content">
-        <h4>Hôtel Chez Amina</h4>
+        <h3>Hôtel Chez Amina</h3>
            <p>Nuit à partir de  <em class="euro">96€</em></p>
            <div class="card-rating">
             <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
@@ -139,7 +131,7 @@
                   <div class="box-carte-hebergement">
                     <img src="images/hebergements/reisetopia.jpg" alt="Hôtel Les mouettes">
                   <div class="card-content">
-                <h4>Hôtel Les mouettes</h4>
+                <h3>Hôtel Les mouettes</h3>
                    <p>Nuit à partir de  <em class="euro">76€</em></p>
                    <div class="card-rating">
                     <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
@@ -155,7 +147,7 @@
                           <div class="box-carte-hebergement">
                             <img src="images/hebergements/annie-spratt.jpg" alt="Hôtel de la mer">
                           <div class="card-content">
-                        <h4>Hôtel de la mer</h4>
+                        <h3>Hôtel de la mer</h3>
                            <p>Nuit à partir de <em class="euro">46€</em></p>
                            <div class="card-rating">
                             <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
@@ -171,7 +163,7 @@
                                   <div class="box-carte-hebergement">
                                     <img src="images/hebergements/marcus-loke.jpg" alt="Auberge La Canebière">
                                   <div class="card-content">
-                                <h4>Auberge La Canebière</h4>
+                                <h3>Auberge La Canebière</h3>
                                    <p>Nuit à partir de  <em class="euro">25€</em></p>
                                    <div class="card-rating">
                                     <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
@@ -188,7 +180,7 @@
                                           <div class="box-carte-hebergement">
                                             <img src="images/hebergements/nicate-lee.jpg" alt="Auberge Le Panier">
                                           <div class="card-content">
-                                        <h4>Auberge Le Panier</h4>
+                                        <h3>Auberge Le Panier</h3>
                                            <p>Nuit à partir de  <em class="euro">23€</em></p>
                                            <div class="card-rating">
                                             <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
@@ -280,7 +272,7 @@
                 <section id="activite" class="Activités"> 
 
                         <div class="Activités-marseille" >
-                            <h3>Activités à Marseille</h3>
+                            <h2>Activités à Marseille</h2>
                         </div>
 
                             <div class="div-activités">
@@ -288,22 +280,22 @@
 
                               <div class="card-activités">
                                 <img src="images/activites/reno-laithienne.jpg" alt="vieux-port">
-                                    <h4>Vieux-Port</h4>
+                                    <h3>Vieux-Port</h3>
                                 </div>
 
                                 <div class="card-activités">
                                     <img src="images/activites/paul-hermann.jpg" alt="Fort de Pomègues">
-                                        <h4>Fort de Pomègues</h4>
+                                        <h3>Fort de Pomègues</h3>
                                     </div>
 
                                     <div class="card-activités">
                                         <img src="images/activites/kilyan-sockalingum.jpg" alt="Parc national des Calanques">
-                                            <h4>Parc national des Calanques</h4>
+                                            <h3>Parc national des Calanques</h3>
                                         </div>
 
                                         <div class="card-activités">
                                             <img src="images/activites/florian-wehde.jpg" alt="Notre-Dame-de-la-Garde">
-                                                <h4>Notre-Dame-de-la-Garde</h4>
+                                                <h3>Notre-Dame-de-la-Garde</h3>
                                             </div>
                                  </div>
                         </section>
@@ -311,19 +303,18 @@
 
         </main>
         <footer>
-
-                <div class="a-propos">
-                    <h3>À propos</h3>
-                    <ul>
+            <div class="a-propos">
+                <h2>À propos</h2>
+                <ul>
                     <li><a href="#">Fonctionnement du site</a></li>
                     <li><a href="#">Conditions générales</a></li>
                     <li><a href="#">Données et confidentialité</a></li>
-                    </ul>
-                </div>
+                </ul>
+            </div>
 
 
                 <div class="nos-hebergements">
-                    <h3>Nos hébergements</h3>
+                    <h2>Nos hébergements</h2>
                     <ul>
                 <li><a href="#">Charte qualité</a></li>
                 <li><a href="#">Proposer votre hôtel</a></li>
@@ -333,7 +324,7 @@
 
 
                 <div class="assistance">
-                    <h3>Assistance</h3>
+                    <h2>Assistance</h2>
                     <ul>
                     <li><a href="#">Centre d’aide</a></li>
                     <li><a href="#">Nous contacter</a></li>
