--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     <div class="conteneur-info">
                         <figure class="logo-info centrer-flex"></figure>
                             <p>Plus de 500 logements sont disponibles dans cette ville</p>
-                    </div>
+                </div>
 
         </section>
        
@@ -97,7 +97,7 @@
                         <img src="images/hebergements/fred-kleber.jpg" alt="Hôtel du port">
                             <div class="card-content">
                                 <h3>Hôtel du port</h3>
-                                    <p>Nuit à partir de  <em class="euro">52€</em></p>
+                                    <p>Nuit à partir de 52<em class="euro">€</em></p>
                                         <div class="card-rating">
                                             <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
                                             <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
@@ -114,7 +114,7 @@
                             <img src="images/hebergements/febrian-zakaria.jpg" alt="Hôtel chez Amina">
                                 <div class="card-content">
                                     <h3>Hôtel Chez Amina</h3>
-                                        <p>Nuit à partir de  <em class="euro">96€</em></p>
+                                        <p>Nuit à partir de 96<em class="euro">€</em></p>
                                             <div class="card-rating">
                                                 <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
                                                 <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
@@ -131,7 +131,7 @@
                                 <img src="images/hebergements/reisetopia.jpg" alt="Hôtel Les mouettes">
                                     <div class="card-content">
                                         <h3>Hôtel Les mouettes</h3>
-                                            <p>Nuit à partir de  <em class="euro">76€</em></p>
+                                            <p>Nuit à partir de 76<em class="euro">€</em></p>
                                                 <div class="card-rating">
                                                     <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
                                                     <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
@@ -147,7 +147,7 @@
                                 <img src="images/hebergements/annie-spratt.jpg" alt="Hôtel de la mer">
                                     <div class="card-content">
                                         <h3>Hôtel de la mer</h3>
-                                            <p>Nuit à partir de <em class="euro">46€</em></p>
+                                            <p>Nuit à partir de 46<em class="euro">€</em></p>
                                                 <div class="card-rating">
                                                     <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
                                                     <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
@@ -163,7 +163,7 @@
                                 <img src="images/hebergements/marcus-loke.jpg" alt="Auberge La Canebière">
                                     <div class="card-content">
                                         <h3>Auberge La Canebière</h3>
-                                            <p>Nuit à partir de  <em class="euro">25€</em></p>
+                                            <p>Nuit à partir de 25<em class="euro">€</em></p>
                                                 <div class="card-rating">
                                                     <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
                                                     <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
@@ -180,7 +180,7 @@
                                 <img src="images/hebergements/nicate-lee.jpg" alt="Auberge Le Panier">
                                     <div class="card-content">
                                         <h3>Auberge Le Panier</h3>
-                                           <p>Nuit à partir de  <em class="euro">23€</em></p>
+                                           <p>Nuit à partir de 23<em class="euro">€</em></p>
                                                 <div class="card-rating">
                                                     <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
                                                     <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
