apres visio avec mentor

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
                         <div tabindex="0" class="box-filtre">
                             <img class="filtre-logo centrer-flex" src ="images/logo/Property 1=romantic.svg" alt="icone Romantiques">
-                                <h3>Romantique</h3>
+                            <h3>Romantique</h3>
                         </div>
 
                         <div tabindex="0" class="box-filtre">
@@ -192,15 +192,15 @@
                                         </div>
                                 </div>
     </section>
-         <a href="" ><strong>Afficher plus</strong></a>  
+         <a href="" class="afficher-plus"><strong>Afficher plus</strong></a>  
 
                 </section>
 
                 <section class="populaires">
-                    <div class="populaires-title">
+                    <!-- <div class="populaires-title"> -->
                         <h2 class="section-title">Les plus populaires</h2>
                             <i class="fa-solid fa-chart-line" aria-hidden="true"></i>
-                    </div>
+                    <!-- </div> -->
                     <div class="populaires-cards">
                         <a href="#">
                             <article class="card">
@@ -264,39 +264,40 @@
             </div>
 
 
-                <section id="activite" class="Activités"> 
+            <section id="activite" class="Activites"> 
 
-                        <div class="Activités-marseille" >
-                            <h2>Activités à Marseille</h2>
-                        </div>
+                <div class="Activites-marseille" >
+                    <h2>Activités à Marseille</h2>
+                </div>
 
-                        <div class="div-activités">
-
-
-                        <div class="card-activités">
-                            <img src="images/activites/reno-laithienne.jpg" alt="vieux-port">
-                                <h3>Vieux-Port</h3>
-                        </div>
+                <div class="div-activites">
 
 
-                        <div class="card-activités">
-                            <img src="images/activites/paul-hermann.jpg" alt="Fort de Pomègues">
-                                <h3>Fort de Pomègues</h3>
-                        </div>
-
-
-                        <div class="card-activités">
-                            <img src="images/activites/kilyan-sockalingum.jpg" alt="Parc national des Calanques">
-                                <h3>Parc national des Calanques</h3>
-                        </div>
-
-
-                        <div class="card-activités">
-                            <img src="images/activites/florian-wehde.jpg" alt="Notre-Dame-de-la-Garde">
-                                <h3>Notre-Dame-de-la-Garde</h3>
-                        </div>
+                    <div class="card-activites">
+                        <img src="images/activites/reno-laithienne.jpg" alt="vieux-port">
+                        <h3>Vieux-Port</h3>
                     </div>
-                </section>
+
+
+                    <div class="card-activites">
+                        <img src="images/activites/paul-hermann.jpg" alt="Fort de Pomègues">
+                        <h3>Fort de Pomègues</h3>
+                    </div>
+
+
+                    <div class="card-activites">
+                        <img src="images/activites/kilyan-sockalingum.jpg" alt="Parc national des Calanques">
+                        <h3>Parc national des Calanques</h3>
+                    </div>
+
+
+                    <div class="card-activites">
+                        <img src="images/activites/florian-wehde.jpg" alt="Notre-Dame-de-la-Garde">
+                        <h3>Notre-Dame-de-la-Garde</h3>
+                    </div>
+                </div>
+                
+            </section>
 
 
         </main>
