mise en place bouton mobile

--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
                 <label for="recherche"> <i class="fa-solid fa-location-dot ping"></i></label>
                     <input type="search" name="search" class="search" id="recherche" placeholder="Marseille, France">
                     <input type="submit" class="submit" value="Rechercher">
+                    <button class="btn-form-mobile" type="submit">
+                        <i class="fa-solid fa-magnifying-glass"></i>
+                    </button>
             </form>
 
 
