apres visio avec mentor maj des populaires

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     </button>
             </form>
 
-
+            <main>
                 <div class="filtres">
 
                     <h2>Filtres</h2> 
@@ -88,36 +88,17 @@
                 </div>
 
         </section>
-       
-<main>
-    <div class="hebergements-and-populaires">
-        <section id="hebergement" class="hebergements"> 
+        <div class="hebergements-and-populaires">
+            <section id="hebergement" class="hebergements"> 
 
-            <h2>Hébergements à Marseille</h2>
+                <h2>Hébergements à Marseille</h2>
 
-                <section class="cartes">
-                    <div class="box-carte-hebergement">
-                        <img src="images/hebergements/fred-kleber.jpg" alt="Hôtel du port">
-                            <div class="card-content">
-                                <h3>Hôtel du port</h3>
-                                    <p>Nuit à partir de 52<em class="euro">€</em></p>
-                                        <div class="card-rating">
-                                            <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                            <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                            <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                            <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                            <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"></i>
-                                            <span class="sr-only">Note de 4 sur 5</span>
-                                        </div>
-                                </div>
-                        </div>
-
-
+                    <section class="cartes">
                         <div class="box-carte-hebergement">
-                            <img src="images/hebergements/febrian-zakaria.jpg" alt="Hôtel chez Amina">
+                            <img src="images/hebergements/fred-kleber.jpg" alt="Hôtel du port">
                                 <div class="card-content">
-                                    <h3>Hôtel Chez Amina</h3>
-                                        <p>Nuit à partir de 96<em class="euro">€</em></p>
+                                    <h3>Hôtel du port</h3>
+                                        <p>Nuit à partir de 52<em class="euro">€</em></p>
                                             <div class="card-rating">
                                                 <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
                                                 <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
@@ -126,6 +107,23 @@
                                                 <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"></i>
                                                 <span class="sr-only">Note de 4 sur 5</span>
                                             </div>
+                                    </div>
+                            </div>
+
+
+                            <div class="box-carte-hebergement">
+                                <img src="images/hebergements/febrian-zakaria.jpg" alt="Hôtel chez Amina">
+                                    <div class="card-content">
+                                        <h3>Hôtel Chez Amina</h3>
+                                            <p>Nuit à partir de 96<em class="euro">€</em></p>
+                                                <div class="card-rating">
+                                                    <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                                    <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                                    <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                                    <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                                    <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"></i>
+                                                    <span class="sr-only">Note de 4 sur 5</span>
+                                                </div>
                                     </div>
                             </div>
 
@@ -201,8 +199,10 @@
 
                 <section class="populaires">
                     <!-- <div class="populaires-title"> -->
-                        <h2 class="section-title">Les plus populaires</h2>
+                        <div class="popular-title">
+                            <h2 class="section-title">Les plus populaires</h2>
                             <i class="fa-solid fa-chart-line" aria-hidden="true"></i>
+                        </div>
                     <!-- </div> -->
                     <div class="populaires-cards">
                         <a href="#">
