--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <p>En plein centre-ville ou en pleine nature</p>
             </section>
         </header>
-
+        <main>
         <section class="section-recherche">
 
 
@@ -55,19 +55,19 @@
                     </button>
             </form>
 
-            <main>
+            
                 <div class="filtres">
 
                     <h2>Filtres</h2> 
 
                     <div tabindex="0" class="box-filtre">
                             <img class="filtre-logo centrer-flex" src ="images/logo/Property 1=price.svg" alt="icone billet">
-                                <h3>Economique</h3>
+                            <h3>Economique</h3>
                         </div>
 
                         <div tabindex="0" class="box-filtre">
                             <img class="filtre-logo centrer-flex" src="images/logo/icon-fam.svg" alt="icone famille">
-                                <h3>Familial</h3>
+                            <h3>Familial</h3>
                         </div>
 
                         <div tabindex="0" class="box-filtre">
@@ -77,15 +77,15 @@
 
                         <div tabindex="0" class="box-filtre">
                             <img class="filtre-logo centrer-flex" src ="images/logo/Property 1=fire.svg" alt="icone pépites">
-                                <h3>Nos pépites</h3>
+                            <h3>Nos pépites</h3>
                         </div>
 
                     </div>
     
                     <div class="conteneur-info">
-                        <figure class="logo-info centrer-flex"></figure>
-                            <p>Plus de 500 logements sont disponibles dans cette ville</p>
-                </div>
+                        <figure><img src ="images/logo/I.svg" alt="icone Info"></figure>
+                        <p>Plus de 500 logements sont disponibles dans cette ville</p>
+                    </div>
 
         </section>
         <div class="hebergements-and-populaires">
