--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     </a>
                 </figure>
                 <nav class="header-nav">
-                    <ul class="liste-nav centrer-flex">
+                    <ul class="liste-nav">
                         <li class="item-nav centrer-flex">
                             <a class="centrer-flex" href="#hebergement">Hébergements</a>
                         </li>
